// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalConfirmation should match confirm mode with description 1`] = `
<div>
  <div
    class="p-6"
  >
    <h2
      class="h4 mb-2 max-w-sm text-neutral-400 dark:text-neutral-50"
    >
      my title
    </h2>
    <div
      class="mb-6 text-sm text-neutral-350 dark:text-neutral-50"
    >
      my description
      <span
        class="link relative -top-0.5 ml-1 inline max-w-[250px] cursor-pointer truncate text-sm text-sky-500"
        data-state="closed"
        data-testid="copy-cta"
      >
        staging
         
        <i
          aria-hidden="true"
          class="fa-solid fa-copy "
        />
      </span>
    </div>
    <form>
      <div
        class="mb-5"
        data-testid="input-small-wrapper"
      >
        <div
          class="input input--small flex-grow"
          data-testid="input"
        >
          <label
            class="hidden"
          />
          <input
            class="absolute left-0 top-0 h-full w-full rounded px-2 text-sm text-neutral-400 placeholder:text-neutral-350"
            data-testid="input-value"
            name="name"
            placeholder="Enter the current name"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 hover:[&:not(:focus-visible):not(:disabled)]:shadow-sm active:[&:not(:focus-visible)]:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-transparent text-neutral-350 hover:[&:not(:active):not(:focus-visible)]:border-neutral-300 hover:[&:not(:disabled)]:text-neutral-400 dark:hover:[&:not(:disabled)]:text-neutral-250 focus-visible:text-neutral-400 active:bg-neutral-150 dark:active:bg-transparent active:text-neutral-400 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`ModalConfirmation should match delete mode with description 1`] = `
<div>
  <div
    class="p-6"
  >
    <h2
      class="h4 mb-2 max-w-sm text-neutral-400 dark:text-neutral-50"
    >
      my title
    </h2>
    <div
      class="mb-6 text-sm text-neutral-350 dark:text-neutral-50"
    >
      my description
    </div>
    <form>
      <div
        class="mb-5"
        data-testid="input-small-wrapper"
      >
        <div
          class="input input--small flex-grow"
          data-testid="input"
        >
          <label
            class="hidden"
          />
          <input
            class="absolute left-0 top-0 h-full w-full rounded px-2 text-sm text-neutral-400 placeholder:text-neutral-350"
            data-testid="input-value"
            name="name"
            placeholder="Enter "delete""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 hover:[&:not(:focus-visible):not(:disabled)]:shadow-sm active:[&:not(:focus-visible)]:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-transparent text-neutral-350 hover:[&:not(:active):not(:focus-visible)]:border-neutral-300 hover:[&:not(:disabled)]:text-neutral-400 dark:hover:[&:not(:disabled)]:text-neutral-250 focus-visible:text-neutral-400 active:bg-neutral-150 dark:active:bg-transparent active:text-neutral-400 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-red-500 active:bg-red-600 hover:bg-red-400 text-white disabled:text-red-300 disabled:bg-red-100"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`ModalConfirmation should match delete mode without description 1`] = `
<div>
  <div
    class="p-6"
  >
    <h2
      class="h4 mb-2 max-w-sm text-neutral-400 dark:text-neutral-50"
    >
      my title
    </h2>
    <div
      class="mb-6 text-sm text-neutral-350 dark:text-neutral-50"
    >
      To confirm the deletion of 
      <strong>
        staging
      </strong>
      , please type "delete"
    </div>
    <form>
      <div
        class="mb-5"
        data-testid="input-small-wrapper"
      >
        <div
          class="input input--small flex-grow"
          data-testid="input"
        >
          <label
            class="hidden"
          />
          <input
            class="absolute left-0 top-0 h-full w-full rounded px-2 text-sm text-neutral-400 placeholder:text-neutral-350"
            data-testid="input-value"
            name="name"
            placeholder="Enter "delete""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 hover:[&:not(:focus-visible):not(:disabled)]:shadow-sm active:[&:not(:focus-visible)]:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-transparent text-neutral-350 hover:[&:not(:active):not(:focus-visible)]:border-neutral-300 hover:[&:not(:disabled)]:text-neutral-400 dark:hover:[&:not(:disabled)]:text-neutral-250 focus-visible:text-neutral-400 active:bg-neutral-150 dark:active:bg-transparent active:text-neutral-400 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none"
          type="button"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-red-500 active:bg-red-600 hover:bg-red-400 text-white disabled:text-red-300 disabled:bg-red-100"
          type="submit"
        >
          Confirm
        </button>
      </div>
    </form>
  </div>
</div>
`;
